Fix sidebar scrollbar not showing
Setting width in combination with `postion: fixed` causes scrollbar not to show - this fix has the undesired effect of the making the menu item highlight extended to the width of the longest item of the given menu set (ul).

--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -1,7 +1,8 @@
 .custom-fixed-sidebar {
   position: fixed;
   display: block;
-  overflow-y: auto;
   overflow-x: visible;
-  width: inherit;
+  overflow-y: scroll;
+  // width: inherit;
+  max-height: 90vh !important;
   }
